[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "path"
authors = [
	{ name = "Jason Orendorff", email = "jason.orendorff@gmail.com" },
]
maintainers = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "A module wrapper for os.path"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jaraco/path"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 6, != 8.1.*",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	"pytest-mypy",
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1; sys_platform != 'cygwin'",

	# local
	"appdirs",
	"packaging",
	'pywin32; platform_system == "Windows" and python_version < "3.12"',
	"more_itertools",
	# required for checkdocs on README.rst
	"pygments",
]
doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# tidelift
	"jaraco.tidelift >= 1.4",

	# local
]

[tool.setuptools_scm]
