[metadata]
name = path
author = Jason Orendorff
author_email=jason.orendorff@gmail.com
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
description = A module wrapper for os.path
long_description = file:README.rst
url = https://github.com/jaraco/path
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff

	# local
	appdirs
	packaging
	pywin32; platform_system == "Windows" and python_version < "3.12"
	more_itertools

	# required for checkdocs on README.rst
	pygments

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# tidelift
	jaraco.tidelift >= 1.4

	# local

[options.entry_points]
